--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 /*----------------home---------------------------------------------*/
 body {
+    overflow-x: hidden;
     background: url('ms.png');
     margin-top: 0px;
     padding: 0px;
@@ -24,9 +25,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 30px 5%;
     background-image: linear-gradient(#24252A, black);
-    opacity: 86%;
+    opacity: 100%;
 
 
 
@@ -73,26 +74,86 @@ nav li a:hover {
 }
 
 /*-----------------------Home Content---------------------------------------------*/
+
+
 .name {
-
     display: flex;
-    align-items: center;
-    color: rgba(242, 237, 237, 0.713);
-
-    letter-spacing: 1.5px;
-    font-size: 39px;
-    height: 75vh;
-    transition: all 0.4s ease 0s;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 89vh;
+    background-color: #fff;
 
 }
+
+
+
+.right {
+    width: 700px;
+
+
+}
+
+.right img {
+    width: 35%;
+    height: 35%;
+    margin-top: 150px;
+    margin-left: 200px;
+    border-radius: 20px;
+    border: 2px solid rgb(34, 34, 34);
+
+}
+
+
+
+.left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 100%;
+    width: 725px;
+    color: rgba(242, 237, 237, 0.713);
+    margin: 0 auto;
+   
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    li {
+        font-size: 39px;
+    }
+
+    .bio {
+        flex-wrap: wrap;
+        flex-direction: column;
+        margin-left: 85px;
+        color: #24252A;
+        font-size: 25px;
+        /* font-weight: bold; */
+        word-wrap: break-word;
+    }
+}
+ .center-text{
+    margin-top: 15px;
+ }
+
+
+
+
 
 .name span {
     color: #963200;
 }
 
 .name ul li {
+    color: rgb(34, 34, 34);
     list-style-type: none;
 }
+
 
 
 /*------------------------------About Me------------------------------------------------------*/
@@ -131,9 +192,10 @@ nav li a:hover {
 
 /*-----------------My Project-------------------------------------------------*/
 
-.sub-title{
+.sub-title {
     color: aliceblue;
 }
+
 #M3 {
     padding: 15px 85px;
 
@@ -182,6 +244,7 @@ nav li a:hover {
     font-weight: 500;
     margin-bottom: 20px;
 }
+
 .layer {
     width: 100%;
     height: 0%;
@@ -199,7 +262,7 @@ nav li a:hover {
     padding: 300px 0;
     text-align: center;
     font-size: 20px;
-    transition:height 0.5ms;
+    transition: height 0.5ms;
 
 }
 
@@ -219,51 +282,61 @@ nav li a:hover {
 .p1 :hover img {
     transform: scale(1.1);
 }
+
 .p1:hover .layer {
     height: 100%;
 }
+
 /*--------------------------------------CONTACT----------------------------------------------*/
 
-.contact-left{
+.contact-left {
     flex-basis: 30%;
 }
-.contact-right{
+
+.contact-right {
     padding: 45px 10px;
     flex-basis: 60%;
-   
+
 }
 
-.contact-left p{
+.contact-left p {
     color: aqua;
     margin-top: 30px;
 }
-.contact-left p i{
-color: #ff004f;
-margin-right: 5px;
-font-size: 25px;
+
+.contact-left p i {
+    color: #ff004f;
+    margin-right: 5px;
+    font-size: 25px;
 }
-.sociol-icons{
-   
+
+.sociol-icons {
+
     margin-top: 30px;
-   
-}
-.sociol-icons a{
-text-decoration: none;
-font-size: 30px;
-margin-right: 25px;
-color: #ababab;
-display: inline-block;
-transform: transform 0.5s;
 
 }
-.sociol-icons a:hover{
+
+.sociol-icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 25px;
+    color: #ababab;
+    display: inline-block;
+    transform: transform 0.5s;
+
+}
+
+.sociol-icons a:hover {
     color: #ff004f;
     transform: translatey(-5px);
 }
-.contact-right{
+
+.contact-right {
     width: 100%;
 }
-form input,form textarea{
+
+form input,
+form textarea {
     width: 100%;
     border: 0;
     outline: none;
@@ -274,7 +347,6 @@ form input,form textarea{
     font-size: 20px;
     border-radius: 10px;
 }
+
 /*---------------------css for small screen--------------------------------*/
-@media only screen and (max-width:600px){
-    
-}
+@media only screen and (max-width:600px) {}
