--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 }
 
+
 /*----------------home---------------------------------------------*/
 body {
     overflow-x: hidden;
@@ -28,6 +29,8 @@ header {
     padding: 30px 5%;
     background-image: linear-gradient(#24252A, black);
     opacity: 100%;
+    position: fixed;
+    z-index: 1000;
 
 
 
@@ -80,7 +83,7 @@ nav li a:hover {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 89vh;
+    height: 100vh;
     background-color: #fff;
 
 }
@@ -117,7 +120,7 @@ nav li a:hover {
         filter: grayscale(0);
         box-shadow: 3px 3px 10px black;
     }
-    
+
     100% {
         transform: scale(1);
         filter: grayscale(0);
@@ -209,24 +212,32 @@ nav li a:hover {
 }
 
 .col-2 font {
-    font-size: 60px;
-    font-weight: 600;
-    color: #fff;
+    
+    text-align: center;
+     color: #fff;
+     font-size: 45px;
 }
 
 /*-----------------My Project-------------------------------------------------*/
 
 .sub-title {
-    color: aliceblue;
+    margin-top: 55px;
+   text-align: center;
+    color: #24252A;
+    font-size: 45px;
 }
 
 #M3 {
+    background-color: #fff;
+    height: 800%;
     padding: 15px 85px;
 
 }
 
 .p1 {
-    display: grid;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 44px;
     margin-top: 50px;
@@ -234,7 +245,9 @@ nav li a:hover {
 }
 
 .work-1 {
-
+    width: 700px;
+    height: 400px;
+    margin-left: 100px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
@@ -242,13 +255,28 @@ nav li a:hover {
 
 .work-2 {
 
+    margin-left: 500px;
+    width: 700px;
+    height: 400px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
 }
 
-.work-3 {
 
+.work-3 {
+    margin-left: 100px;
+    position: relative;
+    width: 700px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.work-4 {
+    margin-left: 500px;
+    width: 700px;
+    height: 400px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
@@ -264,16 +292,18 @@ nav li a:hover {
 
 
 .layer h3 {
-    color: aliceblue;
+    color: #fff;
     font-weight: 500;
+
     margin-bottom: 20px;
 }
 
 .layer {
     width: 100%;
     height: 0%;
-    color: #ababab;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
+    color: #fff;
+    background: linear-gradient(rgba(255, 255, 255, 0.39), #000000);
+
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -292,11 +322,11 @@ nav li a:hover {
 
 .layer a {
     margin-top: 20px;
-    color: #e696af;
+    color: #ffffff;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 60px;
-    background: rgb(64, 38, 38);
+    background: rgb(0, 0, 0);
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -311,8 +341,48 @@ nav li a:hover {
     height: 100%;
 }
 
-/*--------------------------------------CONTACT----------------------------------------------*/
+/* ---------------------------------SKILL------------------------------ */
+#M4{
+  
+    height: 700px;
+    padding: 15px 20px;
+}
+.container {
+    
+}
+.skill{
+    margin-top: 55px;
+    text-align: center;
+     color: #fff;
+     font-size: 45px;
+}
+.boxs { 
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin: 30px;
+}
+.box {
+    height: 170px;
+    width: 250px;
+    background-color: rgb(255, 255, 255);
+}
+.box img{
+    height: 170px;
+    width: 250px;
+}
 
+/*--------------------------------------CONTACT----------------------------------------------*/
+#M5 {
+    height: 600px;
+    padding: 0px 30px;
+}
+.tiitle{
+    text-align: center;
+     color: #fff;
+     font-size: 45px;
+}
 .contact-left {
     flex-basis: 30%;
 }
