--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ nav li a:hover {
 
 .sub-title {
     margin-top: 55px;
-   text-align: center;
+    text-align: center;
     color: #24252A;
     font-size: 45px;
 }
@@ -236,7 +236,7 @@ nav li a:hover {
 
 .p1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 44px;
@@ -245,9 +245,9 @@ nav li a:hover {
 }
 
 .work-1 {
-    width: 700px;
-    height: 400px;
-    margin-left: 100px;
+    width: 400px;
+    height: 300px;
+    margin-left: 200px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
@@ -255,9 +255,9 @@ nav li a:hover {
 
 .work-2 {
 
-    margin-left: 500px;
-    width: 700px;
-    height: 400px;
+    /* margin-left: 500px; */
+    width: 400px;
+    height: 300px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
@@ -265,18 +265,18 @@ nav li a:hover {
 
 
 .work-3 {
-    margin-left: 100px;
+    margin-left: 50px;
     position: relative;
-    width: 700px;
-    height: 400px;
+    width: 400px;
+    height: 300px;
     border-radius: 10px;
     overflow: hidden;
 }
 
 .work-4 {
-    margin-left: 500px;
-    width: 700px;
-    height: 400px;
+    margin-right: 150px;
+    width: 400px;
+    height: 300px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
@@ -302,7 +302,7 @@ nav li a:hover {
     width: 100%;
     height: 0%;
     color: #fff;
-    background: linear-gradient(rgba(255, 255, 255, 0.39), #000000);
+    background: linear-gradient(rgba(0, 0, 0, 0.84), #ffffffea);
 
     border-radius: 10px;
     position: absolute;
@@ -313,7 +313,7 @@ nav li a:hover {
     align-items: center;
     justify-items: center;
     flex-direction: column;
-    padding: 300px 0;
+    padding: 200px 0;
     text-align: center;
     font-size: 20px;
     transition: height 0.5ms;
@@ -326,7 +326,7 @@ nav li a:hover {
     text-decoration: none;
     font-size: 15px;
     line-height: 60px;
-    background: rgb(0, 0, 0);
+    background: rgb(2, 0, 0);
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -342,105 +342,155 @@ nav li a:hover {
 }
 
 /* ---------------------------------SKILL------------------------------ */
-#M4{
-  
-    height: 700px;
+#M4 {
+
+    height: 1000%;
     padding: 15px 20px;
 }
-.container {
-    
-}
-.skill{
+
+.container {}
+
+.skill {
     margin-top: 55px;
     text-align: center;
-     color: #fff;
-     font-size: 45px;
+    color: #fff;
+    font-size: 45px;
 }
-.boxs { 
+
+.boxs {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 5px;
     margin: 30px;
 }
+
 .box {
     height: 170px;
     width: 250px;
     background-color: rgb(255, 255, 255);
 }
-.box img{
+
+.box img {
     height: 170px;
     width: 250px;
 }
 
 /*--------------------------------------CONTACT----------------------------------------------*/
 #M5 {
-    height: 600px;
-    padding: 0px 30px;
+    height: 610px;
+    padding: 0px 0px;
+    background-color: #fff;
 }
-.tiitle{
+
+.tiitle {
     text-align: center;
-     color: #fff;
-     font-size: 45px;
-}
-.contact-left {
-    flex-basis: 30%;
+    font-size: 45px;
 }
 
-.contact-right {
-    padding: 45px 10px;
-    flex-basis: 60%;
+.footer{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.contact-up {
+
+    padding: 10px 350px;
+    box-sizing: border-box;
 
 }
 
-.contact-left p {
-    color: aqua;
+.contact-down {
+    width: 100%;
+    flex-basis: 50%;
+    background-color: #000000;
+    box-sizing: border-box;
+}
+
+.footlast {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 218px;
+}
+
+.contact-up form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.foot-right {
     margin-top: 30px;
+    margin-right: 50px;
 }
 
-.contact-left p i {
-    color: #ff004f;
-    margin-right: 5px;
-    font-size: 25px;
-}
-
-.sociol-icons {
-
+.foot-left {
+    margin-left: 50px;
     margin-top: 30px;
+    color: #fff;
+  .p2{
+    margin-top: 15px;
+  
+  }
+  
+    
+}
 
+.contact-up form button {
+    margin-top: 10px;
+    /* Adjust the margin as needed */
+    padding: 10px 20px;
+    border: none;
+    border-radius: 7px;
+    background-color: rgba(23, 23, 23, 0.7);
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.contact-up form button:hover {
+    background-color: #414141;
 }
 
 .sociol-icons a {
     text-decoration: none;
     font-size: 30px;
-    margin-right: 25px;
-    color: #ababab;
+    margin-right: 30px;
+    color: #fff;
     display: inline-block;
-    transform: transform 0.5s;
+    transform: transform 0.2s;
 
 }
 
 .sociol-icons a:hover {
-    color: #ff004f;
+    color: #414e85;
     transform: translatey(-5px);
 }
 
-.contact-right {
-    width: 100%;
-}
+
 
 form input,
 form textarea {
     width: 100%;
     border: 0;
     outline: none;
-    background: #e8d9d9;
+    background: rgba(23, 23, 23, 0.7);
     padding: 12px;
-    margin: 12px;
-    color: rgb(80, 17, 17);
+    margin: 10px;
+    color: #fff;
     font-size: 20px;
     border-radius: 10px;
 }
+form input::placeholder {
+    color: #000000; 
+}
+form textarea::placeholder {
+    color: #000000; 
+}
+
 
 /*---------------------css for small screen--------------------------------*/
 @media only screen and (max-width:600px) {}
